# solcat

./: .gitignore  Cargo.toml  LICENSE.md  README.md  build.sh  ci.sh  test.sh
.github/workflows/: ci.yaml
app/: .env.example  README.md  package.json
app/app/: globals.css  layout.tsx  page.tsx
app/app/actions/: solana.ts
app/app/components/: WalletContextProvider.tsx
app/app/controllers/: solcat.ts
cli/: .example.env  Cargo.toml
cli/src/: main.rs
integration_tests/: Cargo.toml
integration_tests/tests/: tests.rs
integration_tests/tests/example_program/: tests.rs
integration_tests/tests/fixtures/: fixture.rs
integration_tests/tests/program/: tests.rs
program/: Cargo.toml
program/src/: errors.rs  lib.rs  pod.rs  utils.rs
program/src/accounts/: mod.rs  vault.rs
program/src/instructions/: empty_vault.rs  lock_vault.rs  mod.rs
sdk/: Cargo.toml
sdk/src/: lib.rs
