[workspace]
resolver = "2"
members = ["cli/", "integration_tests/", "program/", "sdk/"]

[workspace.package]
name = "solcat-diamond-hands"
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.100"
clap = { version = "4.5", features = ["derive", "env"] }
dotenv = "0.15.0"
pinocchio = "0.9.2"
pinocchio-log = "0.5.1"
pinocchio-pubkey = "0.1.0"
pinocchio-system = "0.3.0"
pinocchio-token = "0.4.0"
solana-client = "3.0.0"
solana-commitment-config = "3.0.0"
solana-instruction = "3.0.0"
solana-keypair = "3.0.0"
solana-program = { version = "3.0.0", default-features = false, features = [] }
solana-program-test = "3.0.0"
solana-pubkey = "3.0.0"
solana-security-txt = "1.1.1"
solana-signer = "3.0.0"
solana-system-interface = "2.0.0"
solana-system-transaction = "3.0.0"
solana-transaction = "3.0.0"
solana-account-decoder = "3.0.0"
solcat-diamond-hands-program = { path = "program/", version = "=0.1.0" }
solcat-diamond-hands-sdk = { path = "sdk/", version = "=0.1.0" }
spl-associated-token-account-interface = "2.0.0"
spl-token-interface = "2.0.0"
tokio = { version = "1.47.1", features = ["full"] }
