[package]
name = "solcat-diamond-hands-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "solcat-diamond-hands-cli"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
dotenv = { workspace = true }
solana-account-decoder = { workspace = true }
solana-client = { workspace = true }
solana-keypair = { workspace = true }
solana-signer = { workspace = true }
solana-transaction = { workspace = true }
solcat-diamond-hands-sdk = { workspace = true }
