[package]
name = "solcat-diamond-hands-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
solana-commitment-config = { workspace = true }
solana-keypair = { workspace = true }
solana-program = { workspace = true }
solana-program-test = { workspace = true }
solana-pubkey = { workspace = true }
solana-signer = { workspace = true }
solana-system-transaction = { workspace = true }
solana-transaction = { workspace = true }
solcat-diamond-hands-sdk = { workspace = true }
spl-associated-token-account-interface = { workspace = true }
spl-token-interface = { workspace = true }
