[package]
name = "solcat-diamond-hands-sdk"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
anyhow = { workspace = true }
pinocchio = { workspace = true }
solana-instruction = { workspace = true }
solana-keypair = { workspace = true }
solana-program = { workspace = true }
solana-pubkey = { workspace = true }
solana-security-txt = { workspace = true }
solana-signer = { workspace = true }
solana-system-interface = { workspace = true }
solcat-diamond-hands-program = { workspace = true }
spl-associated-token-account-interface = { workspace = true }
spl-token-interface = { workspace = true }
tokio = { workspace = true }
